@@ -26,6 +26,14 @@
                                         <td><input type="file" name="newicon"{xhtml}> ({lang_maxsize} {icon_dimensions})</td>
                                     </tr>
                                     <tr>
+                                      <td class="alignright">{lang_sort_story_by}:</td>
+                                      <td>{story_sort_select}</td>
+                                    </tr>
+                                    <tr>
+                                      <td class="alignright">{lang_sort_story_dir}:</td>
+                                      <td>{story_sort_dir}</td>
+                                    </tr>
+                                    <tr>
                                         <td class="alignright">{lang_defaulttopic}:</td>
                                         <td><input type="checkbox" name="is_default" {default_checked}{xhtml}> ({lang_defaulttext})</td>
                                     </tr>
